# 2952k_g8_final_proj

./: .gitignore  LICENSE  README.md  compare_output.txt  debug_points_10589.ply  debug_points_58856.ply  debug_xvfb.sh  environment.yml  hand_poses.npy  hand_poses_cache.npz  hand_poses_fronttableview_sidetableview_cache.npz  hand_poses_frontview_sideview_cache.npz  hand_poses_offset.npy  hand_poses_squared0view_fronttableview_cache.npz  hand_poses_squared0view_sidetableview_cache.npz  hand_poses_squared0view_squared0view2_cache.npz  hand_poses_squared0view_squared0view3_cache.npz  my_model_debug.ply  pyproject.toml  reg_coef.npy  reg_intercept.npy  requirements.txt  revert_test.py  setup.cfg  temp.txt  test.py  test1.txt
action_extractor/: action_identifier.py  poses_to_actions.py  train.py  trainer.py
action_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
action_extractor/architectures/: direct_resnet_mlp.py  direct_variational_resnet.py
action_extractor/data_collection/: collect_pose_estimation_data_parallel.py
action_extractor/megapose/: action_identifier_megapose.py  imitate_trajectory_with_megapose.py  process_video_dataset_with_megapose.py  test.py  test_pose_estimation.py
action_extractor/nn/: __init__.py  action_identifier.py  datasets.py  train.py  trainer.py
action_extractor/point_cloud/: action_identifier_point_cloud.py  check_dataset_obs.py  compare_orientations.py  compare_trajectories_orientations.py  config.py  generate_point_clouds_from_dataset.py  imitate_trajectory_with_pointcloud.py  label_dataset_with_pseudo_actions.py  (+3 more)
(+35 files in other folders)
