[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "action-extractor"
version = "0.1.0"
description = "Tools for extracting actions via pose estimation from demonstrations"
authors = [{name = "Yilong Song", email = "songyilong18@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.24.0",
    "h5py>=3.11.0",
    "zarr>=2.16.0",
    "einops>=0.8.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0"
]

[tool.setuptools]
packages = ["action_extractor"]
package-data = {"action_extractor" = ["utils/*.npz"]}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]