[metadata]
name = action-extractor
version = 0.1.0
description = Tools for extracting actions via pose estimation from demonstrations
author = Yilong Song
author_email = songyilong18@gmail.com

[options]
packages = find:
python_requires = >=3.7
install_requires =
    h5py>=3.0.0
    numpy>=1.19.0
    
[options.packages.find]
exclude = 
    tests*
    docs*